# MyLib

./: .cproject  .project  CMakeLists.txt
doc/: links.txt  note.txt  note.txt.save
src/: lib_test.cpp  util.cpp  util.h
